tests/diagnostics/push_immutable.stderr
error[E0254]: push の第 1 引数は可変な場所である必要があります (`let mut v` で宣言してください)
 --> tests/diagnostics/push_immutable.kal:2:33
  |
2 | { let v: Vec<i64> = vec(); push(v, 1); };
  |                                 ^
1 個のエラーで中断しました
